# BashCompletion

./: .gitignore  completion.lst  completion.sh
completer/: CMakeLists.txt
completer/src/: main.cpp
